VMRPDetailed: * code cleanup * refactoring * trying to separate model & view * making more easily to translate to webui * minor bug fixing BF [ 1874419 ] JDBC Statement not close in a finally block